# pyiron_base

./: .coveragerc  .coveralls.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .wci.yml  CHANGELOG.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  coverage.json  pyproject.toml  setup.py
.ci_support/: build_notebooks.sh  check.py  condamerge.py  environment-docs.yml  environment-extra.yml  environment-mini.yml  environment-notebooks.yml  environment-old.yml  environment.yml  pip_install.sh  pyironconfig.py  pypi_vs_conda_names.json  release.py  test_backwards.sh  travis_build_notebooks.sh  travis_setup_notebooks.sh  travis_test_backwards.sh  update_environment.py
.github/: dependabot.yml
.github/workflows/: UpdateDependabotPR.yml  atomistic-notebooks-compat.yml  atomistics-compat.yml  backwards.yml  benchmarks.yml  black.yml  brokentest.yml  call-push-pull-main.yml  codeql-analysis.yml  contrib-compat.yml  coverage.yml  dependabot.yml  deploy.yml  docs.yml  format_black.yml  label-to-title.yml  macunittests.yml  minimal.yml  notebooks.yml  old_python.yml  pipeline.yml  pr-labeled.yml  push-pull-main.yml  push-pull.yml  pypicheck.yml  release.yml  unittests.yml  unittests_old.yml  usecase_ADIS.yml  usecase_NFDI4ING.yml  view_release_pyproject.yml
binder/: environment.yml  postBuild
docs/: _config.yml  _toc.yml  api.rst  conf.py  developer.md  environment.yml  index.rst  installation.md  tutorial.md
docs/source/: commandline.md  conf.py  developer.md  example.md  examples.md  examples.rst  faq.md  faq.rst  index.rst  indices.rst  installation.md  installation.rst  queue_submit_flow.md  tutorial.md
notebooks/: First steps.ipynb  custom_jobs.ipynb  dynamic.ipynb  export_example.ipynb  import_example.ipynb  import_export_example.ipynb  pyiron_paper.ipynb  pythonjobtemplate-python-fct.ipynb  pythonjobtemplate.ipynb  user_defined_job.ipynb
pyiron_base/: __init__.py  _tests.py  _version.py  mini.py  toolkit.py
pyiron_base.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pyiron_base/archiving/: export.py  export_archive.py  import.py  import_archive.py
pyiron_base/cli/: __init__.py  __main__.py  control.py  cp.py  install.py  ls.py  mv.py  reloadfile.py  rm.py  wrapper.py
pyiron_base/database/: filetable.py  generic.py  interface.py  jobtable.py  manager.py  performance.py  sqlcolumnlength.py  tables.py
pyiron_base/dataclasses/: job.py
pyiron_base/generic/: datacontainer.py  dynamic.py  factory.py  filedata.py  fileio.py  flattenedstorage.py  genericinput.py  has_groups.py  has_hdf.py  hdfio.py  hdfstub.py  import_export_archive.py  inputlist.py  jedi.py  object.py  parameters.py  singleton.py  template.py  uiwrapper.py  units.py  user_dir.py  util.py
pyiron_base/graphs/: components.py  shared.py
pyiron_base/ide/: __init__.py  ide.py  logger.py  publications.py  queue_adapter.py  settings.py
pyiron_base/interfaces/: has_dict.py  has_groups.py  has_hdf.py  input.py  lockable.py  object.py  singleton.py
pyiron_base/job/: core.py  executable.py  external.py  factory.py  generic.py  interactive.py  interactivewrapper.py  jobstatus.py  jobtype.py  path.py  runfunction.py  script.py  template.py  util.py  worker.py  wrapper.py
pyiron_base/jobs/: datamining.py  dynamic.py  functioncontainer.py  script.py  worker.py
pyiron_base/maintenance/: databaseperformance.py  generic.py
pyiron_base/master/: flexible.py  generic.py  list.py  parallel.py  serial.py  submissionstatus.py
pyiron_base/project/: condaenv.py  data.py  decorator.py  delayed.py  external.py  factory.py  generic.py  gui.py  jobloader.py  maintenance.py  path.py  project_browser.py  size.py  store.py  universal.py  wrap.py
pyiron_base/pyio/: parser.py
pyiron_base/server/: generic.py  queuestatus.py  runmode.py
pyiron_base/settings/: generic.py  install.py  logger.py  publications.py  update.py
pyiron_base/state/: __init__.py  check.py  install.py  logger.py  publications.py  queue_adapter.py  settings.py  signal.py  update.py
pyiron_base/storage/: datacontainer.py  filedata.py  fileio.py  flattenedstorage.py  has_stored_traits.py  hash.py  hdfio.py  hdfstub.py  helper_functions.py  input.py  inputlist.py  keyword.py  parameters.py
pyiron_base/table/: datamining.py
pyiron_base/utils/: deprecate.py  error.py  instance.py  jedi.py  parser.py  safetar.py  strtobool.py  units.py  util.py
specs/: has_groups.md  job_type.md  speculative_specification.md
test_benchmarks/generic/: test_filehdfio.py
tests/: test_testwithproject.py  test_toolkit.py  toy_job_run.py
tests/archiving/: exemplary.csv  sample_hdf.h5  sample_job.py  test_export.py  test_import.py
tests/backwards/: test_dill_cloudpickle_compatibility.py  test_scriptjob_load.py  test_scriptjob_save.py  test_tablejob_load.py  test_tablejob_save.py
tests/database/: test_database_access.py  test_database_file.py  test_filetable.py  test_manager.py  test_no_database_project.py
tests/flex/: test_executablecontainer.py  test_executablecontainer_conda.py  test_jobstep.py  test_pythonfunctioncontainer.py  test_wrap_executable.py
tests/generic/: test_datacontainer.py  test_factory.py  test_fileHDFio.py  test_filedata.py  test_fileio.py  test_flattenedstorage.py  test_genericParameters.py  test_genericinput.py  test_hdfstub.py  test_import.py  test_inputlist.py  test_jobtype.py  test_object.py  test_singleton.py  test_units.py  test_util.py
tests/ide/: test_install.py  test_logger.py  test_publications.py  test_queue_adapter.py  test_settings.py
tests/interfaces/: test_hashdf.py  test_input.py
tests/job/: test_childids.py  test_copyto.py  test_databaseproperties.py  test_dynamic.py  test_external.py  test_factory.py  test_genericJob.py  test_genericMaster.py  test_hdf5content.py  test_interactivewrapper.py  test_jobStatus.py  test_job_interactive.py  test_jobtype.py  test_jobtypechoice.py  test_script.py  test_scriptjob.py  test_template.py  test_worker.py  test_wrapper.py
tests/master/: test_GenericMaster.py  (+2 more)
update_scripts/: pyiron_base_0.3_to_0.4.py
(+180 files in other folders)
