[build-system]
requires = ["cloudpickle", "executorlib", "h5io_browser", "h5py", "numpy", "monty", "pandas", "psutil", "pyfileindex", "pyiron_dataclasses", "pyiron_snippets", "pysqa", "sqlalchemy", "tables", "tqdm", "traitlets", "setuptools", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "pyiron_base"
description = "Core components of the pyiron integrated development environment (IDE) for computational materials science"
authors = [
    { name = "Max-Planck-Institut für Eisenforschung GmbH - Computational Materials Design (CM) Department", email = "pyiron@mpie.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pyiron"]
requires-python = ">=3.9, <3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cloudpickle==3.1.1",
    "executorlib==1.6.1",
    "h5io_browser==0.1.13",
    "h5py==3.13.0",
    "numpy==2.2.4",
    "monty==2025.3.3",
    "pandas==2.3.1",
    "psutil==7.0.0",
    "pyfileindex==0.0.38",
    "pyiron_dataclasses==0.0.1",
    "pyiron_snippets==0.2.0",
    "pysqa==0.2.7",
    "sqlalchemy==2.0.42",
    "tables==3.10.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pyiron/pyiron_base"
Documentation = "https://github.com/pyiron/pyiron_base"
Repository = "https://github.com/pyiron/pyiron_base"

[project.optional-dependencies]
conda = [
    "conda==25.3.1",
    "conda_subprocess==0.0.8",
]
devel = [
    "gitpython==3.1.45",
]
flux = [
    "jinja2==3.1.6",
]
stats = [
    "pint==0.24.4",
]

[project.scripts]
pyiron = "pyiron_base.cli:main"

[tool.setuptools.packages.find]
include = ["pyiron_base*"]

[tool.setuptools.dynamic]
version = {attr = "pyiron_base.__version__"}

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "pyiron_base/_version.py"
parentdir_prefix = "pyiron_base"
tag_prefix = "pyiron_base-"
