[build-system]
requires = ["cloudpickle", "executorlib", "h5io_browser", "h5py", "numpy", "monty", "pandas", "psutil", "pyfileindex", "pyiron_dataclasses", "pyiron_snippets", "pysqa", "sqlalchemy", "tables", "tqdm", "traitlets", "hatchling==1.27.0", "hatch-vcs==0.5.0"]
build-backend = "hatchling.build"

[project]
name = "pyiron_base"
description = "Core components of the pyiron integrated development environment (IDE) for computational materials science"
authors = [
    { name = "Max-Planck-Institut für Eisenforschung GmbH - Computational Materials Design (CM) Department", email = "pyiron@mpie.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pyiron"]
requires-python = ">=3.9, <3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cloudpickle==3.1.1",
    "executorlib==1.7.2",
    "h5io_browser==0.2.6",
    "h5py==3.15.1",
    "numpy==2.3.4",
    "monty==2025.3.3",
    "pandas==2.3.3",
    "psutil==7.1.3",
    "pyfileindex==0.1.0",
    "pyiron_dataclasses==0.0.6",
    "pyiron_snippets==1.0.2",
    "pysqa==0.3.3",
    "sqlalchemy==2.0.44",
    "tables==3.10.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pyiron/pyiron_base"
Documentation = "https://github.com/pyiron/pyiron_base"
Repository = "https://github.com/pyiron/pyiron_base"

[project.optional-dependencies]
conda = [
    "conda==25.9.1",
    "conda_subprocess==0.0.10",
]
devel = [
    "gitpython==3.1.45",
]
flux = [
    "jinja2==3.1.6",
]
stats = [
    "pint==0.25.1",
]

[project.scripts]
pyiron = "pyiron_base.cli:main"

[tool.hatch.build]
include = [
    "pyiron_base"
]

[tool.hatch.build.hooks.vcs]
version-file = "pyiron_base/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "pyiron_base"
]

[tool.hatch.build.targets.wheel]
packages = [
    "pyiron_base"
]

[tool.hatch.version]
source = "vcs"
path = "pyiron_base/_version.py"

[tool.coverage.run]
omit = ["pyiron_base/_version.py", "tests/*"]
command_line = "-m unittest discover tests"
